fix: overflow hidden everyhwere

--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -1,5 +1,5 @@
 nav.nav {
-  @apply text-white order-2 md:order-1 md:w-screen md:py-4 md:px-8;
+  @apply text-white order-2 md:order-1 md:py-4 md:px-8;
 
   ul {
     @apply md:flex justify-evenly;
