--- a/styles/Index.module.scss
+++ b/styles/Index.module.scss
@@ -1,5 +1,5 @@
 .main {
-  @apply flex flex-col h-screen w-full;
+  @apply flex flex-col h-screen w-full overflow-hidden;
   background-color: #167740;
   color: white;
   position: relative;
