--- a/styles/Mobile.module.scss
+++ b/styles/Mobile.module.scss
@@ -1,5 +1,5 @@
 .main {
-  @apply flex flex-col h-screen w-screen;
+  @apply flex flex-col h-screen w-screen overflow-hidden;
   background-color: #167740;
   color: white;
   position: relative;
