--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,5 +7,5 @@
 html,
 body {
   font-family: 'Roboto', sans-serif;
-  @apply overflow-hidden;
+  /* @apply overflow-hidden; */
 }
